# osc-placement-tree

./: .gitignore  .stestr.conf  .testr.conf  .travis.yml  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
osc_placement_tree/: __init__.py  dot.py  graph.py  html.py  http.py  plugin.py  tree.py  utils.py
osc_placement_tree/resources/: provider_tree.py
osc_placement_tree/tests/: base.py  uuids.py
osc_placement_tree/tests/functional/: base.py  test_provider_tree.py
osc_placement_tree/tests/unit/: test_dot.py  test_html.py  test_provider_tree.py  test_tree.py
tools/: synch_osc-placement-tree-to-devstack.sh
