[metadata]
name = osc-placement-tree
summary = OpenStackClient plugin for advanced operations for the Placement service

[files]
packages =
    osc_placement_tree

[entry_points]
openstack.cli.extension =
    placement = osc_placement_tree.plugin

openstack.placement.v1 =
    resource_provider_tree_show = osc_placement_tree.resources.provider_tree:ShowProviderTree
    resource_provider_tree_list = osc_placement_tree.resources.provider_tree:ListProviderTree
