[metadata]
name = osc-placement-tree
summary = OpenStackClient plugin for advanced operations for the Placement service
description-file =
    README.rst
author = Balazs Gibizer
author-email = gibizer@gmail.com
home-page = https://github.com/gibizer/osc-placement-tree
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    osc_placement_tree

[entry_points]
openstack.cli.extension =
    placement = osc_placement_tree.plugin

openstack.placement.v1 =
    resource_provider_tree_show = osc_placement_tree.resources.provider_tree:ShowProviderTree
    resource_provider_tree_list = osc_placement_tree.resources.provider_tree:ListProviderTree

[bdist_wheel]
universal=1
